Fixed a couple of issues brought up by sonar